--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,12 @@
+<%= render "shared/header" %>
 <h1>Home</h1>
+<div>
+  <h2>外国人の方の登録</h2>
+  <%= link_to "新規登録", new_foreigner_registration_path %>
+  <%= link_to "ログイン", new_foreigner_session_path %>
+</div>
+<div>
+  <h2>チューターの方の登録</h2>
+  <%= link_to "新規登録", new_tutor_registration_path %>
+  <%= link_to "ログイン", new_tutor_session_path %>
+</div>
