--- a/app/views/tutors/registrations/new.html.erb
+++ b/app/views/tutors/registrations/new.html.erb
@@ -1,29 +1,131 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "tutors/shared/error_messages", resource: resource %>
+<div class="registration-body">
+  <%= form_with model: @tutor, url: tutor_registration_path, class: 'registration-main', local: true do |f| %>
+    <div class='form-wrap'>
+      <div class='form-header'>
+        <h1 class='form-header-text'>
+          Registration form (for tutors)
+        </h1>
+      </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+      <%= render 'devise/shared/error_messages', model: f.object %>
+      
+      <div class="form-group">
+        <div class='form-text-wrap'>
+          <%= f.label :name, "name", class:"form-text" %>
+          <span class="indispensable">indispensable</span>
+        </div>
+        <%= f.text_area :name, class:"input-default", maxlength:"40" %>
+      </div>
+      <div class="form-group">
+        <div class='form-text-wrap'>
+          <%= f.label :email, "email address", class:"form-text" %>
+          <span class="indispensable">indispensable</span>
+        </div>
+        <%= f.email_field :email, class:"input-default", autofocus: true %>
+      </div>
+      <div class="form-group">
+        <div class='form-text-wrap'>
+          <%= f.label :password, "password", class:"form-text" %>
+          <span class="indispensable">indispensable</span>
+        </div>
+        <%= f.password_field :password, class:"input-default", placeholder:"6文字以上の半角英数字" %>
+        <p class='info-text'>please use characters and numeral</p>
+      </div>
+      <div class="form-group">
+        <div class='form-text-wrap'>
+          <%= f.label :password_confirmation, "password(confirmation)", class:"form-text" %>
+          <span class="indispensable">indispensable</span>
+        </div>
+        <%= f.password_field :password_confirmation, class:"input-default" %>
+      </div>
+      <div class="form-group">
+        <div class='form-text-wrap'>
+          <%= f.label :gender, "gender", class:"form-text" %>
+          <span class="indispensable">indispensable</span>
+        </div>
+        <%= f.text_area :gender, class:"input-default", maxlength:"40" %>
+      </div>
+      <div class="form-group">
+        <div class='form-text-wrap'>
+          <%= f.label :birthday, "birthday", class:"form-text" %>
+          <span class="indispensable">indispensable</span>
+        </div>
+        <div class='input-birth-wrap'>
+          <%= raw sprintf(
+                      f.date_select(
+                        :birthday,
+                        class:'select-birth',
+                        use_month_numbers: true,
+                        prompt:'--',
+                        start_year: 1930,
+                        end_year: (Time.now.year - 5),
+                        date_separator: '%s'),
+                      "<p> / </p>", "<p> / </p>") %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class='form-text-wrap'>
+          <%= f.label :country_region, "country/region", class:"form-text" %>
+          <span class="indispensable">indispensable</span>
+        </div>
+        <%= f.text_area :country_region, class:"input-default", maxlength:"40" %>
+      </div>
+      <div class="form-group">
+        <div class='form-text-wrap'>
+          <%= f.label :language, "language", class:"form-text" %>
+          <span class="indispensable">indispensable</span>
+        </div>
+        <%= f.text_area :language, class:"input-default", maxlength:"40" %>
+      </div>
+      <div class="form-group">
+        <div class='form-text-wrap'>
+          <%= f.label :address, "address", class:"form-text" %>
+          <span class="indispensable">indispensable</span>
+        </div>
+        <%= f.text_area :address, class:"input-default", placeholder: 'no need to fill the overall address. Please fill this form freely.(ex. Tokyo, Osaka-City..)', maxlength:"40" %>
+      </div>
+      <div class="form-group">
+        <div class='form-text-wrap'>
+          <%= f.label :job, "job", class:"form-text" %>
+          <span class="indispensable">indispensable</span>
+        </div>
+        <%= f.text_area :job, class:"input-default", maxlength:"40" %>
+      </div>
+      <div class="form-group">
+        <div class='form-text-wrap'>
+          <%= f.label :hobby, "hobby", class:"form-text" %>
+          <span class="indispensable">indispensable</span>
+        </div>
+        <%= f.text_area :hobby, class:"input-default", maxlength:"40" %>
+      </div>
+      <div class="form-group">
+        <div class='form-text-wrap'>
+          <%= f.label :motivation, "motivation", class:"form-text" %>
+          <span class="indispensable">indispensable</span>
+        </div>
+        <%= f.text_area :motivation, class:"input-default", maxlength:"40" %>
+      </div>
+      <div class="form-group">
+        <div class='form-text-wrap'>
+          <%= f.label :free, "free", class:"form-text" %>
+          <span class="indispensable">indispensable</span>
+        </div>
+        <%= f.text_area :free, class:"input-long", maxlength:"40" %>
+      </div>
+      
+      
+      <div class="form-group">
+        <h2 class='form-bottom-text'>
+          「会員登録」のボタンを押すと会員登録が完了します。
+        </h2>
+      </div>
+      <div class='register-btn'>
+        <%= f.submit "新規登録" ,class:"register-link" %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
+  <% end %>
+</div>
 <%= render "tutors/shared/links" %>
