--- a/app/views/foreigners/registrations/new.html.erb
+++ b/app/views/foreigners/registrations/new.html.erb
@@ -108,10 +108,10 @@
     </div>
     <div class="form-group">
       <div class='form-text-wrap'>
-        <%= f.label :concern, "concern", class:"form-text" %>
+        <%= f.label :wonder, "", class:"form-text" %>
         <span class="indispensable">indispensable</span>
       </div>
-      <%= f.text_area :concern, class:"input-default", maxlength:"40" %>
+      <%= f.text_area :wonder, class:"input-default", maxlength:"40" %>
     </div>
     <div class="form-group">
       <div class='form-text-wrap'>
